Changes in 3.9.3

1)  Apply Steven Springl's patch for port checking.

Changes in 3.9.2

1)  Implement '-C {shell|perl}'.

2)  Implement LOCKFILE

3)  Fix typo in prog.footer.

4)  Fix Shorewall-perl hosts and tcclasses errors.

5)  Add IPPserver macro.

6)  Fix problem with 'stop' and 'clear' when shorewall-shell not
    installed.

7)  Moved lib.dynamiczones to Shorewall.

8)  Fix silly bug in lib.base.

9)  Apply Steven Springl's patch for ICMP.
