@@ -27,7 +27,10 @@ Problems corrected in Shorewall 3.9.3
 
 Other changes in Shorewall 3.9.3
 
-None.
+1)  An 'optional' option has been added to
+    /etc/shorewall/interfaces. When 'optional' is specified for an
+    interface, Shorewall will be silent when it is not possible to
+    modify the interface's /proc/sys/net/ipv4/conf/ attributes. 
 
 Migration Considerations:
 
