@@ -2,6 +2,8 @@ Changes in 3.9.3
 
 1)  Apply Steven Springl's patch for port checking.
 
+2)  Implement 'optional' interface option.
+
 Changes in 3.9.2
 
 1)  Implement '-C {shell|perl}'.
